Java Update, minor fixes